--- a/Presentation/mobSocial.WebApp/pages/layouts/_layout-none.html
+++ b/Presentation/mobSocial.WebApp/pages/layouts/_layout-none.html
@@ -1,5 +1,5 @@
 ﻿ <!-- Content Wrapper. Contains page content -->
-<div class="content-wrapper">
+<div class="content-wrapper no-margin">
     <!-- Main content -->
     <section class="content">
         <div id="main-content">
@@ -9,11 +9,3 @@
     <!-- /.content -->
 </div>
 <!-- /.content-wrapper -->
-
-<footer class="main-footer">
-    <div class="pull-right hidden-xs">
-        <b>Version</b> 2.3.5
-    </div>
-    <strong>Copyright &copy; 2014-2016 <a href="http://almsaeedstudio.com">Almsaeed Studio</a>.</strong> All rights
-    reserved.
-</footer>
