--- a/Presentation/mobSocial.WebApp/pages/layouts/_layout-dashboard.html
+++ b/Presentation/mobSocial.WebApp/pages/layouts/_layout-dashboard.html
@@ -232,8 +232,8 @@
                 <!-- User Account: style can be found in dropdown.less -->
                 <li class="dropdown user user-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <img src="themes/admin/AdminLTE/img/user2-160x160.jpg" class="user-image" alt="User Image">
-                        <span class="hidden-xs">Alexander Pierce</span>
+                        <img ng-src="{{CurrentUser.ProfileImageUrl}}" class="user-image" alt="User Image">
+                        <span class="hidden-xs">{{CurrentUser.Name}}</span>
                     </a>
                     <ul class="dropdown-menu">
                         <!-- User image -->
@@ -288,10 +288,10 @@
         <!-- Sidebar user panel -->
         <div class="user-panel">
             <div class="pull-left image">
-                <img src="themes/admin/AdminLTE/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                <img ng-src="{{CurrentUser.ProfileImageUrl}}" class="img-circle" alt="User Image">
             </div>
             <div class="pull-left info">
-                <p>Alexander Pierce</p>
+                <p>{{CurrentUser.Name}}</p>
                 <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
             </div>
         </div>
@@ -311,7 +311,7 @@
         <ul class="sidebar-menu">
             <li class="header">MAIN NAVIGATION</li>
             <li class="active">
-                <a href="#">
+                <a ui-sref="layoutDashboard.dashboard">
                     <i class="fa fa-dashboard"></i> <span>Dashboard</span>
                 </a>
             </li>
