Removed page title from dashboard layout. It should be part of individual pages.

--- a/Presentation/mobSocial.WebApp/pages/layouts/_layout-dashboard.html
+++ b/Presentation/mobSocial.WebApp/pages/layouts/_layout-dashboard.html
@@ -323,7 +323,7 @@
                     </span>
                 </a>
                 <ul class="treeview-menu">
-                    <li><a href="/login"><i class="fa fa-users"></i> Manage Users</a></li>
+                    <li><a ui-sref="layoutDashboard.userlist" ui-sref-opts="{reload: true}"><i class="fa fa-users"></i> Manage Users</a></li>
                     <li><a href=""><i class="fa fa-user-plus"></i> Add User</a></li>
                 </ul>
             </li>
@@ -393,18 +393,6 @@
 
 <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
-    <!-- Content Header (Page header) -->
-    <section class="content-header">
-        <h1>
-            Dashboard
-            <small>Version 2.0</small>
-        </h1>
-        <ol class="breadcrumb">
-            <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-            <li class="active">Dashboard</li>
-        </ol>
-    </section>
-
     <!-- Main content -->
     <section class="content">
         <div id="main-content">
