Bundle updated and UI improved

--- a/Presentation/mobSocial.WebApp/themes/admin/AdminLTE/css/overrides.scss
+++ b/Presentation/mobSocial.WebApp/themes/admin/AdminLTE/css/overrides.scss
@@ -8,3 +8,12 @@
         margin-right:5px;
     }
 }
+
+.alert{
+    ul{
+        padding-left:30px;
+        li{
+            list-style-type:none;
+        }
+    }
+}
