--- a/Presentation/mobSocial.WebApp/themes/admin/AdminLTE/css/overrides.css
+++ b/Presentation/mobSocial.WebApp/themes/admin/AdminLTE/css/overrides.css
@@ -5,3 +5,8 @@
   max-width: 50px;
   margin-right: 5px; }
 
+.alert ul {
+  padding-left: 30px; }
+  .alert ul li {
+    list-style-type: none; }
+
