Fixed edit state url for profile dropdown

--- a/Presentation/mobSocial.WebApp/pages/layouts/_layout-dashboard.html
+++ b/Presentation/mobSocial.WebApp/pages/layouts/_layout-dashboard.html
@@ -264,7 +264,7 @@
                         <!-- Menu Footer-->
                         <li class="user-footer">
                             <div class="pull-left">
-                                <a ui-sref="layoutDashboard.useredit({ id: CurrentUser.Id })" href="#" class="btn btn-default btn-flat">Edit</a>
+                                <a ui-sref="layoutDashboard.useredit.basic({ id: CurrentUser.Id })" href="#" class="btn btn-default btn-flat">Edit</a>
                             </div>
                             <div class="pull-right" ng-controller="loginController">
                                 <a href="#" class="btn btn-default btn-flat" ng-click="logout()">Sign out</a>
