--- a/Presentation/mobSocial.WebApp/pages/components/commentsBox.html
+++ b/Presentation/mobSocial.WebApp/pages/components/commentsBox.html
@@ -1,34 +1,45 @@
 ﻿<span>
 
-    <a ng-click="Get()"><i class="fa fa-comments"></i> Comments({{TotalComments}})</a>
-    <div ng-repeat="comment in CommentList" class="comment-box">
-        <div class="commenter-info">
-            <img ng-src="{{comment.CustomerProfileImageUrl}}" />
-            <a href="{{comment.CustomerProfileUrl}}">{{comment.CustomerName}}</a>
-            <span class="post-time">
-                <time am-time-ago="comment.DateCreated"></time>
-            </span>
-        </div>
-        <div class="comment-text">
-            {{comment.CommentText}}
-            <div>
-                <like-button entityid="{{comment.Id}}" entityname="CustomerComment" likestatus="comment.LikeStatus" totallikes="{{comment.LikeCount}}"></like-button>
+    <a class="link-black text-sm  margin-r-5" ng-click="CommentRequest.Page == 0 ? Get() : return;" onclick="$(this).next('.comment-list').toggle()" href="">
+        <i class="fa fa-comments-o margin-r-5"></i> Comments({{TotalComments}})
+    </a>
+    <div class="comment-list" style="display: none">
+        <div ng-repeat="comment in CommentList" class="comment-box">
+            <div class="commenter-info">
+                <img ng-src="{{comment.UserProfileImageUrl}}" class="img-circle img-sm img-bordered-sm" />
+                <span class="username">
+                    <a href="{{comment.CustomerProfileUrl}}">{{comment.UserName}}</a>
+                    <a ng-if="comment.CanDelete" class="comment-delete pull-right btn-box-tool" ng-click="Delete(comment.Id)"><i class="fa fa-times"></i></a>
+
+                </span>
+                <span class="description">
+                    <span class="post-time">
+                        <i class="fa fa-clock-o"></i>
+                        <time am-time-ago="comment.DateCreated"></time>
+                    </span>
+                </span>
+            </div>
+            <div class="comment-text">
+                {{comment.CommentText}}
+                <div>
+                    <like-button entityid="{{comment.Id}}" entityname="Comment" likestatus="comment.LikeStatus" totallikes="{{comment.LikeCount}}"></like-button>
+                </div>
 
             </div>
-
         </div>
-        <a ng-if="comment.CanDelete" class="comment-delete" ng-click="Delete(comment.Id)"><i class="fa fa-times"></i></a>
+        <div ng-show="CommentsLoading">Loading comments...</div>
+        <a href="" ng-show="CommentList.length > 0 && CommentList.length < TotalComments && !NoMoreComments && !CommentsLoading" ng-click="Get()" class="view-more-comments">View more comments</a>
     </div>
-
-    <div ng-show="CommentsLoading">Loading comments...</div>
-    <a ng-show="CommentList.length > 0 && !NoMoreComments && !CommentsLoading" ng-click="Get()" class="view-more-comments">View more comments</a>
-    @if (Model.CanPost)
-    {
     <div class="comment-form">
-        <img src="@Model.CustomerProfileImageUrl" />
-        <input ng-model="Comment.CommentText" type="text" placeholder="Type your comment..." />
-        <input type="button" ng-click="Post()" value="Post" />
-    </div>
-    }
+        <!--img ng-src="{{CurrentUser.ProfileImageUrl}}" class="img-circle img-sm img-bordered-sm" /-->
+        <form type="post">
+            <div class="input-group input-group-sm">
+                <input ng-model="Comment.CommentText" class="form-control input-sm" type="text" placeholder="Type a comment">
+                <span class="input-group-btn">
+                    <button type="submit" ng-click="Post()" class="btn btn-secondary btn-flat">Comment</button>
+                </span>
+            </div>
+        </form>
 
+    </div>
 </span>
