--- a/Presentation/mobSocial.WebApp/pages/components/timelinePostFormWidgets.html
+++ b/Presentation/mobSocial.WebApp/pages/components/timelinePostFormWidgets.html
@@ -80,5 +80,36 @@
             });
     </script>
 
-    <!--url to be done-->
+    <!--url-->
+    <script type="text/javascript">
+    $(document).ready(function() {
+        var $scope = attachFunctionToTimelineScope("fetchUrlContents", function(url) {
+            var proxyUrl = "/api/webproxy/get";
+
+            //we need WebClientService to fetch the data
+            var webClientService = angular.element(".activity-list").injector().get('webClientService');
+            $scope.ProcessingPreview = true;
+            webClientService.get(proxyUrl, { url: url }, function(response) {
+                if (response.Success) {
+                    $scope.PostData.PostTypeName = "url";
+                    $scope.PostData.AdditionalAttributeValue = JSON.stringify(response);
+                    $scope.PostPreview = response.ResponseData;
+                }
+                $scope.ProcessingPreview = false;
+            }, function(reponse) {
+                $scope.ProcessingPreview = false;
+            });
+        });
+
+        $scope.$watch("PostData.Message", function (newValue, oldValue) {
+
+            var urls = newValue.match(/\b((http|https)?(:\/\/)?(\S*)\.(\w{2,4})(\/?\S)*)\b/g);
+
+            if (!urls || urls.length == 0)
+                return;
+
+            $scope.fetchUrlContents(urls[0]);
+        });
+    });
+    </script>
 </div>
