views cloaked to avoid flickering during ajax loading

--- a/Presentation/mobSocial.WebApp/pages/layouts/_layout-mobsocial.html
+++ b/Presentation/mobSocial.WebApp/pages/layouts/_layout-mobsocial.html
@@ -174,7 +174,7 @@
         <!-- Main content -->
         <section class="content">
             <div id="main-content">
-                <div ui-view></div>
+                <div ui-view ng-show="!BlockUi"></div>
             </div>
         </section>
         <!-- /.content -->
