--- a/Presentation/mobSocial.WebApp/themes/admin/AdminLTE/css/overrides.scss
+++ b/Presentation/mobSocial.WebApp/themes/admin/AdminLTE/css/overrides.scss
@@ -1,7 +1,12 @@
 ﻿.no-margin {
     margin: 0;
 }
-
+.layout-top-nav{
+    .content{
+        padding-left: 0!important;
+        padding-right:0!important;
+    }
+}
 .user-list {
     img {
         max-width: 50px;
