--- a/Presentation/mobSocial.WebApp/themes/admin/AdminLTE/css/overrides.scss
+++ b/Presentation/mobSocial.WebApp/themes/admin/AdminLTE/css/overrides.scss
@@ -1,12 +1,17 @@
-﻿.no-margin {
+﻿*[file-upload-button]{
+    cursor:pointer;
+}
+.no-margin {
     margin: 0;
 }
-.layout-top-nav{
-    .content{
-        padding-left: 0!important;
-        padding-right:0!important;
+
+.layout-top-nav {
+    .content {
+        padding-left: 0 !important;
+        padding-right: 0 !important;
     }
 }
+
 .user-list {
     img {
         max-width: 50px;
@@ -113,9 +118,10 @@
 }
 
 .post-preview-area {
-    &:empty{
-        display:none;
+    &:empty {
+        display: none;
     }
+
     border: dashed 1px #ccc;
     float: left;
     width: 100%;
@@ -127,15 +133,17 @@
         max-width: 100% !important;
     }
 }
-.post-content-display{
-    margin-bottom:15px;
+
+.post-content-display {
+    margin-bottom: 15px;
 }
 
 .url-preview {
     min-height: 150px;
     padding: 10px;
-    background-color:#eef;
-    overflow:hidden;
+    background-color: #eef;
+    overflow: hidden;
+
     .image {
         float: left;
         width: 160px;
@@ -163,6 +171,116 @@
         }
     }
 }
+
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
-  display: none !important;
+    display: none !important;
+}
+
+.cover-area {
+    .cover {
+        overflow: hidden;
+        width: 100%;
+        height: 260px;
+        position: relative;
+        background-color: #eee;
+
+        .bgcover {
+            & > img {
+                z-index: 1;
+                width: 100%;
+                position: absolute;
+            }
+        }
+
+        .cover-upload-area {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            color: white;
+            z-index: 3;
+        }
+
+        .quick-info {
+            position: absolute;
+            z-index: 2;
+            width: 100%;
+            bottom: 0;
+            text-align: center;
+            font-size: 15px;
+            padding: 10px 0;
+            background-color: rgba(0,0,0,0.7);
+            color: white;
+
+            h1, h2, h3, h4, h5, h6, td, span, a, button, i {
+                color: white;
+            }
+
+            .cover-buttons {
+                float: right;
+                margin-right: 15px;
+
+                .friend-button, .follow-button, .edit-button {
+                    float: left;
+                    margin: 15px 5px;
+                }
+            }
+
+            .battle-info {
+                float: left;
+                padding: 0 20px;
+                text-align: left;
+                border-right: solid 1px #333;
+                height: 70px;
+
+                .battle-status-name {
+                    span {
+                        color: gray;
+                        font-size: 15px;
+                    }
+                }
+            }
+
+            .battle-prize {
+                float: left;
+                padding: 0 20px;
+                text-align: left;
+                height: 70px;
+                border-left: solid 1px #666;
+            }
+        }
+
+        .profile-picture {
+            z-index: 2;
+            position: relative;
+            text-align: center;
+            color: white;
+            padding: 15px 0;
+            margin: 0 auto;
+            width: 150px;
+            height: 150px;
+            img{
+                max-width:100%;
+                max-height:100%;
+            }
+            .profile-upload-button {
+                visibility:hidden;
+                position: absolute;
+                left: 0;
+                top: 50%;
+                width: 100%;
+                padding: 7px;
+                background-color: rgba(0,0,0,0.8);
+                color: #fff;
+                font-size: 0.7em;
+                text-transform: uppercase;
+                a{
+                    color:white;
+                    cursor:pointer;
+                }
+            }
+            &:hover .profile-upload-button{
+               visibility:visible;
+            }
+        }
+    }
 }
