--- a/Presentation/mobSocial.WebApp/themes/admin/AdminLTE/css/overrides.css
+++ b/Presentation/mobSocial.WebApp/themes/admin/AdminLTE/css/overrides.css
@@ -138,7 +138,6 @@
   display: none !important; }
 
 .cover-area .cover {
-  overflow: hidden;
   width: 100%;
   height: 260px;
   position: relative;
@@ -146,7 +145,8 @@
   .cover-area .cover .bgcover > img {
     z-index: 1;
     width: 100%;
-    position: absolute; }
+    position: absolute;
+    max-height: 100%; }
   .cover-area .cover .cover-upload-area {
     position: absolute;
     top: 10px;
@@ -162,9 +162,16 @@
     font-size: 15px;
     padding: 10px 0;
     background-color: rgba(0, 0, 0, 0.7);
-    color: white; }
-    .cover-area .cover .quick-info h1, .cover-area .cover .quick-info h2, .cover-area .cover .quick-info h3, .cover-area .cover .quick-info h4, .cover-area .cover .quick-info h5, .cover-area .cover .quick-info h6, .cover-area .cover .quick-info td, .cover-area .cover .quick-info span, .cover-area .cover .quick-info a, .cover-area .cover .quick-info button, .cover-area .cover .quick-info i {
+    color: white;
+    line-height: 2.2em; }
+    .cover-area .cover .quick-info .info-block, .cover-area .cover .quick-info .info-block a {
       color: white; }
+    .cover-area .cover .quick-info .vertical-separator {
+      height: 10px;
+      width: 1px;
+      display: inline-block;
+      background-color: #555;
+      margin: 0 5px; }
     .cover-area .cover .quick-info .cover-buttons {
       float: right;
       margin-right: 15px; }
@@ -214,4 +221,7 @@
         cursor: pointer; }
     .cover-area .cover .profile-picture:hover .profile-upload-button {
       visibility: visible; }
+
+.widget-user .widget-user-header a {
+  color: white; }
 
