--- a/Presentation/mobSocial.WebApp/themes/admin/AdminLTE/css/overrides.scss
+++ b/Presentation/mobSocial.WebApp/themes/admin/AdminLTE/css/overrides.scss
@@ -1,8 +1,39 @@
-﻿*[file-upload-button]{
-    cursor:pointer;
+﻿body {
+    background-color: #ecf0f5;
 }
+
+*[file-upload-button] {
+    cursor: pointer;
+}
+
 .no-margin {
     margin: 0;
+}
+
+.login-box, .register-box {
+    margin: 2% auto !important;
+}
+
+.clear-padding {
+    &.left {
+        padding-left: 0 !important;
+    }
+
+    &.right {
+        padding-right: 0 !important;
+    }
+
+    &.top {
+        padding-top: 0 !important;
+    }
+
+    &.bottom {
+        padding-bottom: 0 !important;
+    }
+
+    &.all {
+        padding: 0 !important;
+    }
 }
 
 .layout-top-nav {
@@ -178,7 +209,6 @@
 
 .cover-area {
     .cover {
-        overflow: hidden;
         width: 100%;
         height: 260px;
         position: relative;
@@ -189,6 +219,7 @@
                 z-index: 1;
                 width: 100%;
                 position: absolute;
+                max-height: 100%;
             }
         }
 
@@ -210,9 +241,18 @@
             padding: 10px 0;
             background-color: rgba(0,0,0,0.7);
             color: white;
+            line-height: 2.2em;
 
-            h1, h2, h3, h4, h5, h6, td, span, a, button, i {
+            .info-block, .info-block a {
                 color: white;
+            }
+
+            .vertical-separator {
+                height: 10px;
+                width: 1px;
+                display: inline-block;
+                background-color: #555;
+                margin: 0 5px;
             }
 
             .cover-buttons {
@@ -258,12 +298,14 @@
             margin: 0 auto;
             width: 150px;
             height: 150px;
-            img{
-                max-width:100%;
-                max-height:100%;
+
+            img {
+                max-width: 100%;
+                max-height: 100%;
             }
+
             .profile-upload-button {
-                visibility:hidden;
+                visibility: hidden;
                 position: absolute;
                 left: 0;
                 top: 50%;
@@ -273,14 +315,24 @@
                 color: #fff;
                 font-size: 0.7em;
                 text-transform: uppercase;
-                a{
-                    color:white;
-                    cursor:pointer;
+
+                a {
+                    color: white;
+                    cursor: pointer;
                 }
             }
-            &:hover .profile-upload-button{
-               visibility:visible;
+
+            &:hover .profile-upload-button {
+                visibility: visible;
             }
+        }
+    }
+}
+
+.widget-user{
+    .widget-user-header{
+        a{
+            color:white;
         }
     }
 }
