--- a/Presentation/mobSocial.WebApp/pages/components/timeline.html
+++ b/Presentation/mobSocial.WebApp/pages/components/timeline.html
@@ -47,4 +47,11 @@
         </div>
     </div>
     <!-- /.post -->
+    <div ng-if="TimelinePosts && TimelinePosts.length == 0">
+        <div class="col-xs-12">
+            <div class="alert alert-danger">
+                No recent posts found
+            </div>
+        </div>
+    </div>
 </div>
